--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,19 +1,6 @@
-v 1.4
+v2.0 (2 September 2011)
 
-1) update forecast.hts() when method = "rw"
-
-v 1.3
-
-1) Bug fixes, especially with respect to time series characteristics, in all td.() functions and bup.f().
-2) Bug fixes to how names are handled in hier.names()
-3) Bug fixes in make.groups()
-4) Bug fix in accuracy.hts()
-5) Replacement of full.hts() with allts(), and allts() included in the namespace.
-6) Because of changes in what allts() returns, the old calls to full.hts() needed to be corrected everywhere.
-7) Updated all references to the working paper.
-
-v 1.2
-
-1) Update the hts function
-2) Update the hts:::bup.f function
-
+* Added grouped time series (gts) objects, and re-wrote many functions in order to handle them.
+* hts objects are now a subset of gts objects.
+* Some old hts methods have been replaced by gts methods.
+* Rob J Hyndman took over maintenance of the package from Han Lin Shang
