--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+v3.01 (7 May 2013)
+* Added the infantgts data
+* Added the vignette
+
 v3.00 (7 March 2013)
 * Restructured gts objects and dropped hts objects. A flag indicates if gts is hierarchical.
 * gts objects can now contain forecasts as well as historical data.
