--- a/vignettes/hts.bib
+++ b/vignettes/hts.bib
@@ -112,9 +112,9 @@
 
 @MANUAL{HAH13,
   title = {hts: Hierarchical and grouped time series},
-  author = {Rob J Hyndman and Roman A Ahmed and Han Lin Shang},
-  year = {2013},
-  note = {R package version 3.00},
+  author = {Rob J Hyndman and Roman A Ahmed and Han Lin Shang and Earo Wang},
+  year = {2014},
+  note = {R package version 4.00},
   url = {http://CRAN.R-project.org/package=hts}
 }
 
