--- a/inst/doc/hts.Rnw
+++ b/inst/doc/hts.Rnw
@@ -4,7 +4,7 @@
 %\VignettePackage{hts}
 
 \documentclass[nojss]{jss}
-\usepackage{amsmath,graphicx,microtype,bm,tikz,tabulary,booktabs,mathtools,fancyvrb}
+\usepackage{amsmath,graphicx,microtype,bm,tikz,,booktabs,mathtools,fancyvrb}
 \mathtoolsset{showonlyrefs}
 \usepackage[utf8]{inputenc} 
 \fvset{samepage=true,frame=single}
@@ -276,47 +276,50 @@ Hierarchical time series forecasting methods described previously can be impleme
 The \code{hts} function creates a hierarchical time series. The required inputs are the bottom-level time series, and information about the hierarchical structure. For example, the structure shown in Figure~\ref{fig-9-4-hier} is specified as follows:
 \begin{Verbatim}
 # bts is a time series matrix containing the bottom-level series
-# The first two series belong to one group, and the last two 
+# The first three series belong to one group, and the last two 
 # series belong to a different group
-bts <- ts(5 + matrix(sort(rnorm(400)), ncol=4, nrow=100))
-y <- hts(bts, g=c(rep(1,2),rep(2,2)))
+# nodes is a list containing the number of child nodes at each level.
+bts <- ts(5 + matrix(sort(rnorm(500)), ncol=5, nrow=100))
+y <- hts(bts, nodes=list(2, c(3, 2)))
 \end{Verbatim}
 
-For a grouped but non-hierarchical time series, the \code{gts} function can be used. If there are more levels, the \code{g} argument should be a matrix where each row contains the grouping structure for each level.
+For a grouped but non-hierarchical time series, the \code{gts} function can be used. If there are more levels, the \code{groups} argument should be a matrix where each row contains the grouping structure for each level.
 
-The \code{allts} function is used to extract time series across the hierarchy, while the \code{Smatrix} function is used to show the summing matrix as defined in \cite{HAA+11}.
+The \code{aggts} function is used to extract time series either across the whole hierarchy or at the selected levels, while the \code{smatrix} function is used to show the summing matrix as defined in \cite{HAA+11}.
 
 \begin{Verbatim}
-ally <-  allts(y) # Returns all series in the hierarchy
-S <- Smatrix(y) # Returns the summing matrix
+ally <-  aggts(y) # Returns all series in the hierarchy
+somey <-  aggts(y, levels = c(0, 2)) # Returns time series at levels 0 and 2
+S <- smatrix(y) # Returns the summing matrix
 \end{Verbatim}
    
-The \code{plot.gts} function allows users to display the historical time series for both an \code{hts} or \code{gts} object. By default, it displays time series across all hierarchical levels, although users can restrict the plot to upper levels only. For example, we plot the top two levels of an \code{hts} object in Figure~\ref{fig:1}.
+The \code{plot.gts} function allows users to display the historical time series for both an \code{hts} or \code{gts} object. By default, it displays time series across all hierarchical levels, although users can restrict the plot to the selected levels. For example, we plot the top two levels of an \code{hts} object in Figure~\ref{fig:1}.
    
-\begin{figure}[!htbp]
+\begin{figure}[!bh]
 \caption{Hierarchical time-series plots}\label{fig:1}
 \centering
 \includegraphics[width=\textwidth]{hts_plot}
 \begin{Verbatim}
-plot(y, levels=2)
+plot(y, levels = c(0, 1))
 \end{Verbatim}
 \end{figure}     
 
+\newpage
+
 Forecasts are obtained with the \code{forecast} function. By default, it produces forecasts using the optimal combination approach with exponential smoothing (ETS) models used for the base forecasts. But other forecasting models and disaggregation methods can be specified via the following arguments:
       
-\vbox{\begin{tabulary}{\linewidth}{LLL}\toprule
-       fmethod && The forecasting method to be used for the base forecasts. Possible values are ``ets", ``arima" and ``rw".\\
-       method && The method used for reconciling the base forecasts. It can take the following values:\\
-      \end{tabulary}
-   \begin{tabulary}{\linewidth}{lL}
-   \hspace*{2.8cm} comb & Optimal combination forecasts; \\
-   \hspace*{2.8cm} bu & Bottom-up forecasts; \\
-   \hspace*{2.8cm} mo & Middle-out forecasts where the level used is specified by the level argument; \\
-   \hspace*{2.8cm} tdgsa & Top-down forecasts based on the average historical proportions (Gross-Sohl method A); \\
-   \hspace*{2.8cm} tdgsf  & Top-down forecasts based on the proportion of historical averages (Gross-Sohl method F);\\
-   \hspace*{2.8cm} tdfp & Top-down forecasts using forecast proportions.\\
-   \bottomrule
-   \end{tabulary}}
+\begin{tabular}{lp{13.7cm}}\toprule
+    \code{fmethod} & The forecasting method to be used for the base forecasts. Possible values are \code{"ets"}, \code{"arima"} and \code{"rw"}.\\
+    \code{method} & The method used for reconciling the base forecasts. It can take the following values:\\
+   &\begin{tabular}{lp{10cm}}
+   \code{comb} & Optimal combination forecasts; \\
+   \code{bu} & Bottom-up forecasts; \\
+   \code{mo} & Middle-out forecasts where the level used is specified by the level argument; \\
+   \code{tdgsa} & Top-down forecasts based on the average historical proportions (Gross-Sohl method A); \\
+   \code{tdgsf}  & Top-down forecasts based on the proportion of historical averages (Gross-Sohl method F);\\
+   \code{tdfp} & Top-down forecasts using forecast proportions.
+   \end{tabular}\\
+   \bottomrule\end{tabular}
 
 
 \section*{Forecasting regional infant mortality counts in Australia}\label{sec:3}
@@ -334,24 +337,25 @@ infantforecast <- forecast(infantgts, h=10, method="bu")
 plot(infantforecast, include=10)
 \end{Verbatim}
    
-\begin{figure}[!htbp]
+\begin{figure}[!htb]
 \caption{Hierarchical time-series forecasts using the bottom-up approach}\label{fig:3}
 \centering
-\includegraphics[width=14cm]{forecasthts}
+\includegraphics[width=\textwidth]{forecasthts}
 \end{figure}
 
 While Figure~\ref{fig:3} was produced using the \code{forecast.gts} function, there is alternative approach to produce forecasts which may give users extra flexibility.
 
 \begin{Verbatim}
-allts_infant <- allts(infantgts)
+allts_infant <- aggts(infantgts)
 allf <- matrix(, nrow=10, ncol=ncol(allts_infant))
 # Users can select their preferred time-series forecasting method
 # for each time series
 for(i in 1:ncol(allts_infant))
-  allf[,i] <- forecast(auto.arima(allts_infant[,i]), h=10)$mean
+  allf[,i] <- forecast(auto.arima(allts_infant[,i]), h=10, PI=FALSE)$mean
 allf <- ts(allf, start=2004)
-# combine the forecasts with the summing matrix to get a gts object
-y.f <- combinef(allf, Smatrix(infantgts))
+# combine the forecasts with the group matrix to get a gts object
+g <- matrix(c(rep(1, 8), rep(2, 8), rep(1:8, 2)), nrow = 2, byrow = T)
+y.f <- combinef(allf, groups = g)
 \end{Verbatim}
 In order to test the forecast accuracy, the \code{accuracy.gts} function can be used.
 \begin{Verbatim}   
@@ -359,13 +363,57 @@ In order to test the forecast accuracy, the \code{accuracy.gts} function can be 
 data <- window(infantgts, start=1933, end=1993)
 test <- window(infantgts, start=1994, end=2003)
 forecast <- forecast(data, h=10, method="bu")
-# calculate RMSE, MAE, MAPE and MASE
+# calculate ME, RMSE, MAE, MAPE, MPE and MASE
 accuracy.gts(forecast, test)
 \end{Verbatim}
-   
-\section*{Conclusion}
 
-This article describes several techniques in the \pkg{hts} package, for modeling and forecasting hierarchical and grouped time series. The top-down approach models and forecasts time series at the top level, and then disaggregates the values based on historical or forecast proportions. The bottom-up approach models and forecasts time series at the bottom level, and then aggregates to the top level. The middle-out approach combines the top-down and bottom-up approaches. The optimal combination approach considers the problem of hierarchical forecasting from a regression perspective, and it uses ordinary least squares to find the optimal regression coefficients, from which forecasts are obtained. All hierarchical forecasting techniques described can be readily implemented in the \pkg{hts} package.
+\section*{Changes from the \pkg{hts} package version 3}
+
+Every function in \pkg{hts} version 4 has been rewritten in order to improve its efficiency and flexibility. In addition, there are a few new features and changes which will affect users. The most important user-level changes are listed below.
+
+\begin{description}
+  \item[\code{hts}] Argument \code{g} is replaced with \code{nodes}, providing information about the hierarchical structure. This is a simpler and more efficient way of representing the hierarchical structure. The new argument \code{nodes} requires a \code{list} class containing the number of child nodes associated with the level rather than using the old \code{gmatrix} concept. The hierarchy presented in Figure~\ref{fig-9-4-hier} requires \code{nodes} specified as \code{list(2, c(3, 2))} referring to 2 nodes at level~1, with 3 and 2 nodes respectively at level~2. 
+
+  A new argument \code{characters} has also been added, which allows users to customize names for labelling but in a limited way. To illustrate the usage, we use the Anatomical Therapeutic Chemical (ATC) classification system. As shown in Table~\ref{tab:atc}, the hierarchy has six levels including level~0 and one of the bottom series is named ``A10BA02''. In order to construct the labels according to Table~\ref{tab:atc}, we use \code{characters = c(1, 2, 1, 1, 2)}. This indicates that the bottom level names can be read in segments of 1, 2, 1, 1 and 2 characters. The function can then construct the appropriate names for the upper levels.
+
+\begin{table}[!ht]
+    \centering\small
+    \begin{tabular}{ll}
+    \toprule
+     A & Alimentary tract and metabolism (1st level, anatomical main group); \\
+     A10 & Drugs used in diabetes (2nd level, therapeutic subgroup); \\
+     A10B & Blood glucose lowering drugs, excl. insulins (3rd level, pharmacological subgroup); \\
+     A10BA & Biguanides (4th level, chemical subgroup); \\
+     A10BA02  & metformin (5th level, chemical substance); \\
+     \bottomrule
+     \end{tabular}
+     \caption{ATC classification system}
+     \label{tab:atc}
+   \end{table}
+
+ \item[\code{aggts}] This is a new more flexible version of \code{allts} which allows the extraction of specific levels of the hierarchy. For instance, we are interested in observing the regional infant mortality counts across the states and they are obtained by specifying \code{levels = "State"} or \code{levels=2}. All time series in the hierarchy are returned if \code{levels} is omitted. The specification of levels now also works in the \code{plot} function in the same way.
+   \begin{Verbatim}
+    # Return time series aggregated for each state.
+    statets <- aggts(infantgts, levels = "State")  
+    # Plot time series aggregated for each state.
+    plot(infantgts, levels = "State") 
+   \end{Verbatim}
+ \item[\code{forecast}] Fitted values and residuals at the bottom level are made available to users. These are reconciled in the same way as the forecasts, as long as users set \code{keep.fitted = TRUE} and \code{keep.resid = TRUE}. Furthermore, the \pkg{parallel} package has been imported for the support of parallel computing. The \code{forecast} function generates independent forecasts for each time series and it can take a long time to model and forecast these time series. Producing forecasts in parallel (with \code{parallel = TRUE}) enables users to save a significant amount of computing time. 
+
+ Another major change is the new argument \code{weights}, associated with the optimal combination approach. The function uses ordinary least squares for the unscaled forecasts in the case of \code{weights = "none"} (as it did in previous versions). But when \code{weights = "sd"}, it will use weighted least squares for the forecasts scaled by the standard deviation of the forecast errors. A third possibility is \code{weights = "nseries"}; this case is useful when the bottom level series are on the same scale and the weights are then equal to the inverse of the row sums of $\bm{S}$.
+ \begin{Verbatim}
+   fcasts <- forecast(htseg1, h = 10, method = "comb", fmethod = "arima", 
+                  weights = "sd", keep.fitted = TRUE, parallel = TRUE)
+   \end{Verbatim}
+ \item[\code{accuracy.gts}] now returns in-sample error measures at the bottom level, if \code{keep.fitted = TRUE} in the \code{forecast} function and the argument \code{test} is missing.
+   \begin{Verbatim}
+   accuracy.gts(fcasts)  # In-sample error measure
+   \end{Verbatim}
+\end{description}
+   
+%\section*{Conclusion}
+
+%This article describes several techniques in the \pkg{hts} package, for modeling and forecasting hierarchical and grouped time series. The top-down approach models and forecasts time series at the top level, and then disaggregates the values based on historical or forecast proportions. The bottom-up approach models and forecasts time series at the bottom level, and then aggregates to the top level. The middle-out approach combines the top-down and bottom-up approaches. The optimal combination approach considers the problem of hierarchical forecasting from a regression perspective, and it uses ordinary least squares to find the optimal regression coefficients, from which forecasts are obtained. All hierarchical forecasting techniques described can be readily implemented in the \pkg{hts} package.
 
 %The methods reviewed in this article focus on an ever increasing number of time series that are hierarchical in structure and clusters of which may be correlated, and the \ita{hts} package should be considered when the interest lies in modeling and forecasting the future realizations of a hierarchical/group time series.
  
