--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+v4.2 (9 April 2014)
+* Fixed Next.Generic error in accuracy.gts.
+* Adjust weights = sd.
+
 v4.1 (3 Mar 2014)
 * Set the default parallel processes to 2.
 * Fixed three dots in parallel computing for forecast.gts.
