--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,12 @@
-v4.2 (9 April 2014)
+v4.3 (10 June 2014)
+* Fixed bug of the arg "include" in plot.gts, when there are not yearly data.
+* Fixed bug in combinef(), when it handles a simple hierarchy with 2 levels.
+* Improved arg "characters" in hts() to automate the node structure.
+* Added a new arg "characters" in gts(), which will automate the grouping matrix.
+* Added a new reference to combinef() man.
+* Made 'sd' the default weight in forecast.gts().
+
+v4.2 (25 Mar 2014)
 * Fixed Next.Generic error in accuracy.gts.
 * Adjust weights = sd.
 
