--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+v4.4 (22 July 2014)
+* Allowed multiple seasonal objects "msts" in hts() and gts().
+* Fixed bug of MASE in accuracy.gts().
+* Allowed user's defined forecasting function in forecast.gts().
+
 v4.3 (10 June 2014)
 * Fixed bug of the arg "include" in plot.gts, when there are not yearly data.
 * Fixed bug in combinef(), when it handles a simple hierarchy with 2 levels.
