--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,15 @@
+v4.5 (28 June 2015)
+* Fixed bugs in accuracy.gts().
+* Fixed bug in forecast.gts() detecting the right default forecasting horizon.
+* Fixed bug in gts() for a gts with one grouping variable.
+* Speeded up Smatrix().
+* Make SparseM package as dependency.
+* Better handle missing values.
+* Speeded up combinef() for Alan's algorithm.
+* Added 3 new algorithms to the optimally reconciled approach.
+* Fixed bug in forecast.gts() when using external regressors with parallel.
+* Fixed time attributes of fitted and residual series.
+
 v4.4 (22 July 2014)
 * Allowed multiple seasonal objects "msts" in hts() and gts().
 * Fixed bug of MASE in accuracy.gts().
